--- a/Product.css
+++ b/Product.css
@@ -1,126 +1,126 @@
-body {
-  font-family: "Lily Script One", "cursive" "Inter", "Playfair Display", "Arial", sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #F8EADA;
-  text-decoration: none;
-}
-.logo-title-btn {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 10px;
-  margin: 0;
-  padding-top: 7px;
-}
-.logo-title {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-}
-.logo {
-  width: 80px;
-  margin-right: 10px;
-}
-.logo img {
-  width: 100%;
-}
-.Text-title {
-  font-family: "Lily Script One", "cursive";
-  font-size: 28px;
-  color: #532C04;
-  margin: 0;
-  font-weight: 600;
-}
-.back-btn {
-  display: flex;
-  align-items: center;
-  margin-right: 40px;
-  border: solid;
-  border-radius: 10px;
-  border-color: #4A332A;
-  background-color: transparent;
-  width: 155px;
-  height: 45px;
-  justify-content: center;
-}
-.back-icon {
-  display: flex;
-  width: 14px;
-  margin-right: 10px;
-}
-.back-icon img {
-  width: 100%;
-}
-.back-btn p{
-  font-family: "Inter",;
-  font-size: 16px;
-  color: #4A332A;
-  margin: 0;
-  font-weight: 400;
-}
-.container-bar{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex: 1;
-  width: 100%;
-  height: 70px;
-  background-color: #FBFBFB;
-  align-items: center;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
-  position: sticky;
-}
-.nav-bar {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 250px;
-  margin: 0;
-  padding: 0;
-}
-.nav-bar li a {
-  text-decoration: none;
-  font-family: "Playfair Display", sans-serif;
-  font-size: 16px;
-  color: #6B7280;
-  cursor: pointer;
-  font-weight: 500;
-}
-.products {
-  display: flex;
-  width: 20px;
-  height: 30px;
-  justify-content: center;
-  align-items: center;
-}
-.products img {
-  width: 100%;
-  margin-right: 5px;
-}
-.Ingredients {
-  display: flex;
-  width: 20px;
-  height: 30px;
-  justify-content: center;
-  align-items: center;
-}
-.Ingredients img {
-  width: 100%;
-  margin-right: 5px;
-}
-.cart {
-  display: flex;
-  width: 20px;
-  height: 30px;
-  justify-content: center;
-  align-items: center;
-}
-.cart img {
-  width: 100%;
-  margin-right: 5px;
-}
+  body {
+    font-family: "Lily Script One", "cursive" "Inter", "Playfair Display", "Arial", sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #F8EADA;
+    text-decoration: none;
+  }
+  .logo-title-btn {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin: 0;
+    padding-top: 7px;
+  }
+  .logo-title {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+  }
+  .logo {
+    width: 80px;
+    margin-right: 10px;
+  }
+  .logo img {
+    width: 100%;
+  }
+  .Text-title {
+    font-family: "Lily Script One", "cursive";
+    font-size: 28px;
+    color: #532C04;
+    margin: 0;
+    font-weight: 600;
+  }
+  .back-b {
+    display: flex;
+    align-items: center;
+    margin-right: 40px;
+    border: solid;
+    border-radius: 10px;
+    border-color: #4A332A;
+    background-color: transparent;
+    width: 155px;
+    height: 45px;
+    justify-content: center;
+  }
+  .back-icon {
+    display: flex;
+    width: 14px;
+    margin-right: 10px;
+  }
+  .back-icon img {
+    width: 100%;
+  }
+  .back-btn p{
+    font-family: "Inter",;
+    font-size: 16px;
+    color: #4A332A;
+    margin: 0;
+    font-weight: 400;
+  }
+  .container-bar{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex: 1;
+    width: 100%;
+    height: 70px;
+    background-color: #FBFBFB;
+    align-items: center;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    position: sticky;
+  }
+  .nav-bar {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 250px;
+    margin: 0;
+    padding: 0;
+  }
+  .nav-bar li a {
+    text-decoration: none;
+    font-family: "Playfair Display", sans-serif;
+    font-size: 16px;
+    color: #6B7280;
+    cursor: pointer;
+    font-weight: 500;
+  }
+  .products {
+    display: flex;
+    width: 20px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+  }
+  .products img {
+    width: 100%;
+    margin-right: 5px;
+  }
+  .Ingredients {
+    display: flex;
+    width: 20px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+  }
+  .Ingredients img {
+    width: 100%;
+    margin-right: 5px;
+  }
+  .cart {
+    display: flex;
+    width: 20px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+  }
+  .cart img {
+    width: 100%;
+    margin-right: 5px;
+  }
 .report {
   display: flex;
   width: 20px;
@@ -230,7 +230,8 @@ body {
 .popup-container {
   display: flex;
   position: absolute;
-  top: 0; left: 0;
+  top: 0; 
+  left: 0;
   width: 100%; 
   height: 100%;
   background: rgba(0,0,0,0.6);
@@ -355,6 +356,104 @@ body {
   border-radius: 8px;
   cursor: pointer;
   border: none;
+}
+.delete-message {
+    margin: 20px 0;
+    text-align: center;
+}
+.delete-message p {
+    margin: 5px 0;
+}
+.confirm-btn.delete {
+    background-color: #e74c3c;
+    color: white;
+}
+.confirm-btn.delete:hover {
+    background-color: #c0392b;
+}
+.popup {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+.popup-content h2 {
+  font-family: "Montserrat";
+  font-size: 25px;
+  font-weight: 500;
+  color: #532C04;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 28px;
+    font-weight: bold;
+    color: #aaa;
+    cursor: pointer;
+}
+
+.close:hover {
+    color: #000;
+}
+
+.delete {
+    margin: 20px 0;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.delete p {
+  font-family: "Montserrat";
+  font-size: 16px;
+  font-weight: 500;
+  color: #8B6F47;
+  margin: 0;
+}
+
+.popup-buttons {
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ width: 100%;
+}
+.Delete-btn {
+  display: flex;
+  width: 100%;
+  padding-top: 50px;
+}
+.confirm-btn-delete {
+  flex: 1;
+  font-family: "Inter";
+  font-size: 16px;
+  background-color: #FF0000;
+  color: white;
+  border-radius: 6px;
+  border-style: none;
+  padding: 9px;
+  cursor: pointer;
+  box-shadow: 0 4px 4px 2px rgba(0, 0, 0, 0.2);
+}
+.Cancel-btn {
+  display: flex;
+  width: 100%;
+  padding-top: 8px;
+}
+.cancel {
+  flex: 1;
+  font-family: "Inter";
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #D1D5DB;
+  padding: 8px;
+  cursor: pointer;
 }
 .product-item {
   margin-bottom: 20px;
